day02 + upgrade java version
solution to day02 puzzle
upgraded used java version to jdk 13